[Chromium]  Prevent DrawingBuffer instances from corrupting the active texture state of the WebGL contexts. The DrawingBuffer now tracks the state of texture unit 0, and the active texture unit, so that state can be restored. https://bugs.webkit.org/show_bug.cgi?id=73033

Patch by Jeff Timanus <twiz@chromium.org> on 2011-11-23
Reviewed by Kenneth Russell.

Test: fast/canvas/webgl/webgl-texture-binding-preserved.html

Source/WebCore:

* html/canvas/WebGLRenderingContext.cpp:
(WebCore::WebGLRenderingContext::activeTexture):
(WebCore::WebGLRenderingContext::bindTexture):
* platform/graphics/chromium/DrawingBufferChromium.cpp:
(WebCore::DrawingBuffer::DrawingBuffer):
(WebCore::DrawingBuffer::publishToPlatformLayer):
* platform/graphics/gpu/DrawingBuffer.h:
(WebCore::DrawingBuffer::setTexture2DBinding):
(WebCore::DrawingBuffer::setActiveTextureUnit):
* platform/graphics/gpu/mac/DrawingBufferMac.mm:
(WebCore::DrawingBuffer::DrawingBuffer):
* platform/graphics/gpu/qt/DrawingBufferQt.cpp:
(WebCore::DrawingBuffer::DrawingBuffer):
* platform/graphics/gtk/DrawingBufferGtk.cpp:
(WebCore::DrawingBuffer::DrawingBuffer):

LayoutTests:

* fast/canvas/webgl/webgl-texture-binding-preserved-expected.txt: Added.
* fast/canvas/webgl/webgl-texture-binding-preserved.html: Added.

Canonical link: https://commits.webkit.org/89602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101120 268f45cc-cd09-0410-ab3c-d52691b4dbfc